--- a/Proyecto/css/history.css
+++ b/Proyecto/css/history.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #e0f7fa; /* Azul claro como el agua */
+    background-color: #4bc3fc;
 }
 .history-container {
     background-color: #ffffff;
@@ -12,36 +12,26 @@ body {
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     max-width: 1200px;
     width: 100%;
-    border-left: 10px solid #ffeb3b; /* Borde amarillo para la señal de alerta */
+    border-left: 10px solid #ffeb3b;
 }
 .history-title {
     margin-bottom: 20px;
     font-weight: bold;
     text-align: center;
-    color: #0277bd; /* Azul profundo para el texto */
+    color: #0277bd;
 }
 .table th, .table td {
     vertical-align: middle;
 }
 .btn-custom {
-    background-color: #0288d1; /* Azul lavado de autos */
+    background-color: #0288d1;
     color: white;
     font-weight: bold;
 }
 .btn-custom-danger {
-    background-color: #ff5722; /* Naranja para el botón de finalizar lavado */
+    background-color: #ff5722;
     color: white;
     font-weight: bold;
-}
-.alert-sign {
-    display: block;
-    text-align: center;
-    font-size: 24px;
-    color: #ff5722; /* Naranja de señal de alerta */
-    margin-bottom: 15px;
-}
-.alert-sign i {
-    margin-right: 10px;
 }
 .back-button {
     position: absolute;
