--- a/Proyecto/css/login.css
+++ b/Proyecto/css/login.css
@@ -4,17 +4,13 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #4bc3fc;
-    margin: 0;
 }
 .form-container {
     background-color: #f3fbff;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-    border-left: 10px solid #ffeb3b; /* Borde amarillo */
-    max-width: 600px;
-    width: 100%;
-    position: relative;
+    border-left: 10px solid #ffeb3b;
 }
 .form-title {
     margin-bottom: 20px;
@@ -27,14 +23,13 @@ body {
     color: white;
     font-weight: bold;
 }
-.btn-custom:hover {
-    background-color: #4bc3fc;
+.alert-sign {
+    display: block;
+    text-align: center;
+    font-size: 24px;
+    color: #ff5722;
+    margin-bottom: 15px;
 }
-.back-button {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-}
-.back-button:hover {
-    border: 2px solid black;
+.alert-sign i {
+    margin-right: 10px;
 }
